# FCI-Parallel-Computing

./: README.md
CMAKE Linux/: CMakeLists.txt
CMAKE MAC/: CMakeLists.txt
CMAKE Windows/: CMakeLists.txt
CMAKE general template/: CMakeLists.txt
OMP_Tutorial_1/: p5_1_helloOMP.c  p5_2_helloOMP_ErrorHandle.c  p5_3_trapz_serial.c  p5_4_trapz_parallel.c
OMP_Tutorial_2/: p5_10_bad_fibonacci.c  p5_11_PI_serial.c  p5_12_PI_parallel_inaccurate.c  p5_13_PI_parallel_accurate.c  p5_14_PI_parallel_default.c  p5_15_Serial_bubbleSort.c  p5_16_Serial_oddEvenSort.c  p5_17_parallel_oddEvenSort.c  p5_18_SerialvsParallel_Sort.c  p5_19_EnhancedParallelSort.c  p5_5_trapz_parallel_bad.c  p5_6_trapz_parallel_fix.c  p5_7_trapz_parallel_reduction.c  p5_8_trapz_parallel_for.c  p5_9_bad_for_loop.c
OMP_Tutorial_3/: p5_20_Serial_sin.c  p5_21_Parallel_sin.c  p5_22_Parallel_Schedule_sin.c
OMP_Tutorial_4/: omp_msglk.c  omp_msgps.c
OMP_Tutorial_5/: Tokenizer_in  p5_23_Single_vs_task_parallel.c  p5_24_Fibonacci_Recursive_serial.c  p5_25_Fibonacci_Recursive_parallel.c  p5_26_Tokenizer.c  p5_27_Tokenizer_safe.c
